--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -6,6 +6,7 @@
     background: #e2e2e2;
     margin: 5px;
     padding: 5 5 5 5;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .container .heading {
@@ -18,12 +19,23 @@
 
 .container .body {
 	    margin: 5;
+		text-align: justify;
+}
+
+.container .body .button{
+    background-color: #b3c2ce;
+    color: white;
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
+    font-weight: bold;
 }
 
 .sidebar {
     width: 30%;
     display: inline-block;
     min-width: 250px;
+    vertical-align: top;
 }
 
 .main{
@@ -32,3 +44,9 @@
     display: inline-block;
     min-width: 300px;
 }
+
+p {
+	text-align: justify;
+	font-family: 'Open Sans', sans-serif;
+}
+
